--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         <p id="message" class="message"></p>
         <p class="developer-info">Developer - Discord: ste.ki | Instargram: yeojix_</p>
         <p class="developer-info">"오타, 문의, 이름 내려주세요" 디코 혹은 인스타로 연락주세요</p>
+        <p class="developer-info">"그래서 개발자 누군데요??" <- 궁금하시면 디코 혹은 인스타로 연락</p>
     </div>
     <div id="classLists"></div>
 
