--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <input type="text" id="name" placeholder="이름 입력">
         <button id="saveButton">저장하기</button>
         <p id="message" class="message"></p>
-        <p class="developer-info">개발자 - 2학년 1반 정지윤</p>
+        <p class="developer-info">Developer - 2학년 1반 정지윤</p>
     </div>
     <div id="classLists"></div>
 
